--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -25,7 +25,7 @@
         <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
         <div id="smallScreenNav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top">
             <a href="#workGrid" class="w3-bar-item w3-button w3-padding-large" id="work_ejxp">Education/Work Overview</a>
-            <a href="/resume.html" target="_blank" class="w3-bar-item w3-button w3-padding-large" id="rkesume">Resume</a>
+            <a href="resume.html" target="_blank" class="w3-bar-item w3-button w3-padding-large" id="rkesume">Resume</a>
             <a href="#contactGrid" class="w3-bar-item w3-button w3-padding-large" id="contajct">Contact</a>
         </div>
 
