--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -17,7 +17,7 @@
                     href="javascript:void(0)" onclick="toggleMenu()"><i class="fa fa-bars"></i></a>
                 <a href="#aboutGrid" class="w3-bar-item w3-button w3-padding-large" id="home">Home</a>
                 <a href="#workGrid" class="w3-bar-item w3-button w3-padding-large w3-hide-small" id="work_exp">Education/Work Overview</a>
-                <a href="/resume.html" target="_blank" class="w3-bar-item w3-button w3-padding-large w3-hide-small" id="resume">Resume</a>
+                <a href="../resume.html" target="_blank" class="w3-bar-item w3-button w3-padding-large w3-hide-small" id="resume">Resume</a>
                 <a href="#contactGrid" class="w3-bar-item w3-button w3-padding-large w3-hide-small" id="contact">Contact</a>
             </div>
         </div>
