--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -17,7 +17,7 @@
                     href="javascript:void(0)" onclick="toggleMenu()"><i class="fa fa-bars"></i></a>
                 <a href="#aboutGrid" class="w3-bar-item w3-button w3-padding-large" id="home">Home</a>
                 <a href="#workGrid" class="w3-bar-item w3-button w3-padding-large w3-hide-small" id="work_exp">Education/Work Overview</a>
-                <a href="../resume.html" target="_blank" class="w3-bar-item w3-button w3-padding-large w3-hide-small" id="resume">Resume</a>
+                <a href="resume.html" target="_blank" class="w3-bar-item w3-button w3-padding-large w3-hide-small" id="resume">Resume</a>
                 <a href="#contactGrid" class="w3-bar-item w3-button w3-padding-large w3-hide-small" id="contact">Contact</a>
             </div>
         </div>
@@ -25,7 +25,7 @@
         <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
         <div id="smallScreenNav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top">
             <a href="#workGrid" class="w3-bar-item w3-button w3-padding-large" id="work_ejxp">Education/Work Overview</a>
-            <a href="../resume.html" target="_blank" class="w3-bar-item w3-button w3-padding-large" id="rkesume">Resume</a>
+            <a href="resume.html" target="_blank" class="w3-bar-item w3-button w3-padding-large" id="rkesume">Resume</a>
             <a href="#contactGrid" class="w3-bar-item w3-button w3-padding-large" id="contajct">Contact</a>
         </div>
 
@@ -34,7 +34,7 @@
             <div class="w3-full w3-blue-grey w3-container" style="height: 720px;">
                 <div class="w3-padding-64 w3-center w3-padding-large">
                     <h1>Venkata Lakshmi Sasank Tipparaju</h1>
-                    <img src="/images/pp.jpg" class="w3-margin w3-circle" alt="Person"
+                    <img src="images/pp.jpg" class="w3-margin w3-circle" alt="Person"
                         style="width:20%; height:05%">
                     <div class="w3-left-align w3-padding-small">
                         <p>Hi there, you can call me Sasank.</p>
