--- a/MyProfile/resume.html
+++ b/MyProfile/resume.html
@@ -21,7 +21,7 @@
                 <div class="w3-third">
                     <div class="w3-white w3-text-grey w3-card-4">
                         <div class="w3-display-container">
-                            <img src="/images/pp.jpg" class="res_ppImage" alt="Avatar">
+                            <img src="images/pp.jpg" class="res_ppImage" alt="Avatar">
                             <div class="">
                                 <h4 class="res_name">Venkata Lakshmi Sasank Tipparaju</h4>
                             </div>
