--- a/MyProfile/resume.html
+++ b/MyProfile/resume.html
@@ -12,7 +12,7 @@
 </head>
 
 <body >
-    <button id="print_button" class="w3-btn w3-orange w3-small button-container-div">Print<i class="w3-margin-left fa fa-print"></i></button>
+    <button id="print_button" class="w3-btn w3-orange w3-small" style="position: fixed;left: 90%;">Print<i class="w3-margin-left fa fa-print"></i></button>
     <main id="main" class="w3-light-grey">  
         <!-- Page Container -->
         <div class="w3-content w3-margin-top" style="max-width:1400px;">
@@ -22,9 +22,9 @@
                 <div class="w3-third">
                     <div class="w3-white w3-text-grey w3-card-4">
                         <div class="w3-display-container">
-                            <img src="images/pp.jpg" class="res_ppImage" alt="Avatar">
+                            <img src="images/pp.jpg" class="res_ppImage" alt="Avatar" style="margin:1em;width:50%;height:75%;">
                             <div class="">
-                                <h4 class="res_name">Venkata Lakshmi Sasank Tipparaju</h4>
+                                <h4 style="margin:1em;">Venkata Lakshmi Sasank Tipparaju</h4>
                             </div>
                         </div>
 
