--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -31,7 +31,7 @@
 
         <!-- First Grid: Logo & About -->
         <div id="aboutGrid" class="w3-row">
-            <div class="w3-full w3-blue-grey w3-container" style="height: 720px;">
+            <div class="w3-full w3-blue-grey w3-container">
                 <div class="w3-padding-64 w3-center w3-padding-large">
                     <h1>Venkata Lakshmi Sasank Tipparaju</h1>
                     <img src="images/pp.jpg" class="w3-margin w3-circle" alt="Person"
@@ -55,7 +55,7 @@
         </div>
         <hr>
         <!-- Second Grid: Work & Resume -->
-        <div id="workGrid"  class="w3-row w3-margin-top w3-indigo" style="height: 500em;">
+        <div id="workGrid"  class="w3-row w3-margin-top w3-indigo">
             <br><br>
             <div class="w3-full w3-indigo w3-container w3-center" id="work">
                 <h2>Work History Overview</h2>
@@ -132,7 +132,7 @@
         </div>
         <hr>
         <!-- Third Grid: Swing By & Contact -->
-        <div id="contactGrid" class="w3-row w3-dark-grey"style="height: 600px;" >
+        <div id="contactGrid" class="w3-row w3-dark-grey" >
             <div class="w3-full w3-dark-grey w3-container w3-center">
                 <div class="w3-padding-64  w3-padding-large">
                     <h1>Swing By</h1>
