--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -55,7 +55,7 @@
         </div>
         <hr>
         <!-- Second Grid: Work & Resume -->
-        <div id="workGrid"  class="w3-row w3-margin-top w3-indigo">
+        <div id="workGrid"  class="w3-row w3-margin-top w3-indigo" style="height:100%">
             <br><br>
             <div class="w3-full w3-indigo w3-container w3-center" id="work">
                 <h2>Work History Overview</h2>
