--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -37,7 +37,7 @@
                     <img src="images/pp.jpg" class="w3-margin w3-circle" alt="Person"
                         style="width:20%; height:05%">
                     <div class="w3-left-align w3-padding-small">
-                        <p>Hi there, you can call me Sasank.</p>
+                        <p>Hi there, you can call me Sasank. Welcome to my static page</p>
                         <p>&emsp;&emsp; A Highly motivated computer science graduate
                             student passionate about Web technologies &#38 Salesforce ecosystem.
                             Have 2 years of IT experience &#38 worked as a Certified Salesforce Developer in an Agile
