--- a/MyProfile/resume.html
+++ b/MyProfile/resume.html
@@ -125,8 +125,11 @@
                                     </p>
                                 </li>
                                 <li>
-                                    <p>Have strong experience in Salesforce admin configurations and development using Apex class,
-                                        Triggers, Aura components and LWC. Suggesting declarative and programmatic approach.
+                                    <p>Have strong experience in Salesforce admin configurations standard objects – leads, account, opportunities and creating custom objects/ fields with security privileges FLS – profiles, roles, permission sets, OWD, sharing rules, apex sharing, public groups, record types, page layout, validation rules, salesforce apps and lightning record pages using app builder, quick actions, reports, and dashboards, creating custom labels, custom metadata, and custom settings, duplicate rule management, activities etc.
+                                    </p>
+                                </li>
+                                <li>
+                                    <p>Experienced in customized development to build stack-interface /logic using Apex class, Triggers, Aura components, Lightning Web Components and test classes following coding best practices. Suggesting declarative and programmatic approach.
                                     </p>
                                 </li>
                                 <li>
