--- a/MyProfile/resume.html
+++ b/MyProfile/resume.html
@@ -50,12 +50,12 @@
                                 <ul>
                                     <li>Apex, Apex Trigger, Apex Test Classes</li>
                                     <li>Aura Components, Lightning Web Components, Controller Class</li>
-                                    <li>HTML, CSS, JavaScript</li>
+                                    <li>HTML, CSS, JavaScript, PHP, jQuery</li>
                                     <li>Salesforce Lightning</li>
-                                    <li>Salesforce.com Business Process Automations with Flows, Approval Process</li>
+                                    <li>Salesforce.com Business Process Automations with Flows, Process Builder, Approval Process</li>
                                     <li>Salesforce.com Development &#38 Configurations</li>
                                     <li>SOQL, SOSL, Dataloader, Workbench</li>
-                                    <li>Sales Cloud, Service Cloud, Financial Service Cloud</li>
+                                    <li>Sales Cloud, Service Cloud, Financial Service Cloud, Salesforce CPQ</li>
                                 </ul>
                                 <h5>Programming Languages</h5>
                                 <ul>
@@ -65,9 +65,9 @@
                                 <ul>
                                     <li>Git, BitBucket</li>
                                 </ul>
-                                <h5>Other Misc.</h5>
+                                <h5>Other Applications/Tools.</h5>
                                 <ul>
-                                    <li>Unix Shell Scripting, Informatica PowerCenter, Jira, TeamCity, Visual Studio Code</li>
+                                    <li>Unix Shell Scripting, Informatica PowerCenter, Salesforce Ant, Salesforce Workbench, VS Code, TeamCity, Jira</li>
                                 </ul>
                             </div>
                             <hr>
@@ -93,6 +93,7 @@
                                     <li>Can prioritze tasks, Attention to detail</li>
                                     <li>Adapatbility &#38 flexibility</li>
                                     <li>Agilility &#38 open to any challenging work</li>
+                                    <li>Being a team player &#38 transparency</li>
                                 </ul> <hr>
                             </div>
                             <div>
@@ -100,6 +101,7 @@
                                 <ul>
                                     <li><a href="https://github.com/Sasank09" target="_blank" style="text-decoration: none;">Github</a></li>
                                     <li><a href="https://trailblazer.me/id/sasank09" target="_blank" style="text-decoration: none;">Trailhead</a></li>
+                                    <li><a href="https://www.linkedin.com/in/sasank-tipparaju-806408184/" target="_blank" style="text-decoration: none;">LinkedIn</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -140,6 +142,9 @@
                                 <li>
                                     <p>Have an exposure to Sales Cloud, Service Cloud, Financial Service Cloud &#38 Salesforce CPQ.
                                     </p>
+                                </li>
+                                <li>
+                                    <p>Understood the basics of CPQ - Features, Configuring, Bundles, Product Rules, Pricing Methods/rules. Worked on bundle configurations as per business requirements.</p>
                                 </li>
                                 <li>
                                     <p>Have hands-on experience in data migration activities using workbench and data loader
