--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -38,16 +38,9 @@
                         style="width:20%; height:05%">
                     <div class="w3-left-align w3-padding-small">
                         <p>Hi there, you can call me Sasank. Welcome to my static page</p>
-                        <p style="text-align:justify">&emsp;&emsp; A Highly motivated computer science graduate
-                            student passionate about Web technologies &#38 Salesforce ecosystem.
-                            Have 2 years of IT experience &#38 worked as a Certified Salesforce Developer in an Agile
-                            environment.
-                            Experienced in developing customized solutions per business requirements on the
-                            Salesforce.com and have sound
-                            knowledge of Java &#38 Web technologies. Always ready to work in any challenging environment
-                            to prove my skills and utilize
-                            my knowledge for the organization's growth through continuous learning and following
-                            industry best practices.</p>
+                        <p style="text-align:justify">&emsp;&emsp; Highly motivated computer science graduate student and a software developer with entry-level experience of over 2.5 years passionate about Salesforce ecosystem and web development. Specialized in Agile, Object Oriented Programming, and Web technology. 
+                            Always eager to learn new technology and applying them to solve real world problems by innovative software solutions.  Adept at developing CRM solutions for client businesses and identifying opportunities to improve the user experience (Salesforce.com). A fast learner and able to work independently with minimal supervision. 
+                            Involved in end-end project implementation from planning, development, monitoring, delivering and played an active role in all agile ceremonies.</p>
                     </div>
                     
                 </div>
@@ -73,7 +66,7 @@
                             <td>PriceWaterhouseCoopers Accelaration Center</td>
                             <td>Bangalore, India</td>
                             <td>Associate Salesforce Developer</td>
-                            <td>Salesforce Lightning, Apex, Triggers, Aura, LwC, salesforce.com CRM Configurations &#38 Development</td>
+                            <td>Salesforce Lightning, Apex, Triggers, Aura, LWC, SOQL, Salesforce.com CRM Configurations &#38 Development</td>
                         </tr>
                         <tr class="w3-white w3-border">
                             <td>Aug 2020 - Apr 2021</td>
