--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -63,7 +63,7 @@
                         </tr>
                         <tr class="w3-white">
                             <td>Apr 2021 - Jul 2022</td>
-                            <td>PriceWaterhouseCoopers Accelaration Center</td>
+                            <td>PriceWaterhouseCoopers (PwC)</td>
                             <td>Bangalore, India</td>
                             <td>Associate Salesforce Developer</td>
                             <td>Salesforce Lightning, Apex, Triggers, Aura, LWC, SOQL, Salesforce.com CRM Configurations &#38 Development</td>
