--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -55,7 +55,7 @@
                 <div class="w3-container w3-responsive">
                     <table class="w3-table">
                         <tr class="w3-grey">
-                            <th>Year</th>
+                            <th style="width:25%">Year</th>
                             <th>Organization</th>
                             <th>Location</th>
                             <th>Role</th>
