--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -55,7 +55,7 @@
                 <div class="w3-container w3-responsive">
                     <table class="w3-table">
                         <tr class="w3-grey">
-                            <th style="width:25%">Year</th>
+                            <th style="width:15%">Year</th>
                             <th>Organization</th>
                             <th>Location</th>
                             <th>Role</th>
@@ -66,7 +66,7 @@
                             <td>PriceWaterhouseCoopers (PwC)</td>
                             <td>Bangalore, India</td>
                             <td>Associate Salesforce Developer</td>
-                            <td>Salesforce Lightning, Apex, Triggers, Aura, LWC, SOQL, Salesforce.com CRM Configurations &#38 Development</td>
+                            <td>LWC, Aura, Apex, Triggers, SOQL, Salesforce Lightning, Salesforce.com Configurations &#38 Development</td>
                         </tr>
                         <tr class="w3-white w3-border">
                             <td>Aug 2020 - Apr 2021</td>
@@ -91,11 +91,11 @@
                                 <th>Grade/Percentage</th>
                             </tr>
                             <tr class="w3-white">
-                                <td>Aug 2022 - Dec 2023</td>
+                                <td>Aug 2022 - Exp. Dec 2023</td>
                                 <td>Master of Science in Computer Science</td>
                                 <td>University of Central Missouri</td>
                                 <td>Lees' Summit, Missouri, USA</td>
-                                <td>**</td>
+                                <td>*4.0/4.0 GPA</td>
                             </tr>
                             <tr class="w3-white w3-border">
                                 <td>Jun 2016 - May 2020</td>
@@ -139,6 +139,7 @@
                     <b><i class="fa fa-link fa-fw w3-margin-right w3-text-teal"></i>Links</b>
                     <p class="w3-teal"><a href="https://github.com/Sasank09" target="_blank" style="text-decoration: none;">Github</a></p>
                     <p class="w3-teal"><a href="https://trailblazer.me/id/sasank09" target="_blank" style="text-decoration: none;">Trailhead</a></p>
+                    <p class="w3-teal"><a href="https://www.linkedin.com/in/sasank-tipparaju-806408184/" target="_blank" style="text-decoration: none;">LinkedIn</a></p>
                 </div>
                 <hr>
             </div>
