--- a/MyProfile/resume.html
+++ b/MyProfile/resume.html
@@ -24,12 +24,13 @@
                             <img src="images/pp.jpg" class="res_ppImage" alt="Avatar" style="margin:1em;width:50%;height:75%;">
                             <div class="">
                                 <h4 style="margin:1em;">Venkata Lakshmi Sasank Tipparaju</h4>
+                                <p style="margin:1.2em; text-align: justify;" >A tech enthusiast always ready to explore new technology and apply them in real-world scenarios to build creative solutions. Seeking an opportunity to utilize my skills and knowlegde for the growth of your Organization with excellent problem solving skills.</p>
                             </div>
                         </div>
 
                         <div class="w3-container">
                             <p>
-                                <i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Salesforce/Front End Developer
+                                <i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Software/Salesforce Developer
                             </p>
                             <p>
                                 <i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Overland Park, KS, 66212, United States
@@ -37,37 +38,48 @@
                             <p><a href="mailto:thipparajusasank@gmail.com?subject=Mail from Static Website" style="text-decoration: none;">
                                 <i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>thipparajusasank@gmail.com
                             </a></p>
-                            <a href="tel:+4733378901" style="text-decoration: none;">
+                            <a href="tel:+14807969822" style="text-decoration: none;">
                                 <i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+1 (480) 796 9822
                             </a>
                             <hr>
 
                             <p class="w3-large"><b>
-                                <i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
+                                <i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Technical Skills</b>
                             </p>
                             <div>
                                 <h5>Salesforce</h5>
                                 <ul>
-                                    <li>Apex, Apex Trigger, Apex Test Classes</li>
-                                    <li>Aura Components, Lightning Web Components, Controller Class</li>
-                                    <li>HTML, CSS, JavaScript, PHP, jQuery</li>
-                                    <li>Salesforce Lightning</li>
-                                    <li>Salesforce.com Business Process Automations with Flows, Process Builder, Approval Process</li>
-                                    <li>Salesforce.com Development &#38 Configurations</li>
+                                    <li>Salesforce.com Admin Configurations &#38 Development</li>
+                                    <li>Aura Components, Lightning Web Components</li>
+                                    <li>Apex, Apex Trigger, Apex Batch Class</li>
+                                    <li>Salesforce Lightning - App Builder</li>
+                                    <li>Business Process Automations with Flows, Process Builder, Approval Process</li>
                                     <li>SOQL, SOSL, Dataloader, Workbench</li>
-                                    <li>Sales Cloud, Service Cloud, Financial Service Cloud, Salesforce CPQ</li>
+                                    <li>Sales Cloud, FSC, Salesforce CPQ</li>
                                 </ul>
                                 <h5>Programming Languages</h5>
                                 <ul>
-                                    <li>Core Java, Python, MySQL</li>
+                                    <li>Core Java, Python(Flask)</li>
+                                </ul>
+                                <h5>Web Technology</h5>
+                                <ul>
+                                    <li>HTML, CSS, JavaScript, PHP, jQuery, React</li>
+                                    <li>JSON, XML, RESTful API's</li>
+                                </ul>
+                                <h5>Database</h5>
+                                <ul>
+                                    <li>SQL- MySQL</li>
+                                    <li>NoSQL - MongoDB, Neo4J</li>
                                 </ul>
                                 <h5>Version Control System</h5>
                                 <ul>
-                                    <li>Git, BitBucket</li>
+                                    <li>Github, BitBucket</li>
                                 </ul>
                                 <h5>Other Applications/Tools.</h5>
                                 <ul>
-                                    <li>Unix Shell Scripting, Informatica PowerCenter, Salesforce Ant, Salesforce Workbench, VS Code, TeamCity, Jira</li>
+                                    <li>Agile, JIRA, Apache Ant</li>
+                                    <li>Unix, Informatica PowerCenter</li>
+                                    <li>Visual Studio Code, Eclipse</li>
                                 </ul>
                             </div>
                             <hr>
@@ -78,10 +90,6 @@
                                 <p>English</p>
                                 <div class="w3-light-grey w3-round-xlarge">
                                     <div class="w3-round-xlarge w3-teal" style="height:10px;width:100%"></div>
-                                </div>
-                                <p>Telugu</p>
-                                <div class="w3-light-grey w3-round-xlarge">
-                                    <div class="w3-round-xlarge w3-teal" style="height:10px;width:100%"></div>
                                 </div><hr>
                             </div>
                             <div>
@@ -89,11 +97,7 @@
                                     <b><i class="fa fa-comments-o fa-fw w3-margin-right w3-text-teal"></i>Other Strengths</b>
                                 </p>
                                 <ul>
-                                    <li>Good logical and analytical skills</li>
-                                    <li>Can prioritze tasks, Attention to detail</li>
-                                    <li>Adapatbility &#38 flexibility</li>
-                                    <li>Agilility &#38 open to any challenging work</li>
-                                    <li>Being a team player &#38 transparency</li>
+                                    <li>Good logical and analytical skills, Can prioritze tasks, Attention to detail, Adapatbility, Team Player</li>
                                 </ul> <hr>
                             </div>
                             <div>
@@ -121,43 +125,38 @@
                             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2021 - July 2022</h6>
                             <ul>
                                 <li>
-                                    <p>Involved in complete Software Development Life Cycle of Salesforce CRM App development for a
-                                        new business unit in an existing complex org. Helped the client in migrating functionality/data
-                                        from Access database to Salesforce as per needs.
+                                    <p>As a Salesforce Developer, involved in complete Software Development Life Cycle of Salesforce CRM Application. 
+                                        Helped the client business in migrating functionality from MS Access to Salesforce and improved the client’s team efficiency &#38 productivity by 75% through automating the business
                                     </p>
                                 </li>
                                 <li>
-                                    <p>Have strong experience in Salesforce admin configurations standard objects – leads, account, opportunities and creating custom objects/ fields with security privileges FLS – profiles, roles, permission sets, OWD, sharing rules, apex sharing, public groups, record types, page layout, validation rules, salesforce apps and lightning record pages using app builder, quick actions, reports, and dashboards, creating custom labels, custom metadata, and custom settings, duplicate rule management, activities etc.
+                                    <p>Experienced in implementing customized solutions to build full stack using Aura components, Lightning Web Components and Apex, Triggers by employing the knowledge of web technology such as HTML, CSS, JavaScript, jQuery, XML, JSON, and Object-Oriented Programming concepts.
                                     </p>
                                 </li>
                                 <li>
-                                    <p>Experienced in customized development to build stack-interface /logic using Apex class, Triggers, Aura components, Lightning Web Components and test classes following coding best practices. Suggesting declarative and programmatic approach.
+                                    <p>Proficiency in Salesforce configurations development with standard objects – leads, account, opportunities, creating custom objects/ fields with security privileges FLS – profiles, roles, permission sets, OWD, sharing rules, apex sharing, public groups, record types, page layout, validation rules, salesforce apps and lightning record pages using app builder, quick actions, reports, and dashboards, creating custom labels, custom metadata, and custom settings, duplicate rule management, activities etc. 
+                                        and Salesforce Business Process Automations such as using flows, process builder, workflows, and approvals                        
                                     </p>
                                 </li>
                                 <li>
-                                    <p>Have a good understanding of Salesforce Business Process Automations such as using flows,
-                                        process builder, workflows, approvals as per client needs.                         
-                                    </p>
-                                </li>
-                                <li>
-                                    <p>Have an exposure to Sales Cloud, Service Cloud, Financial Service Cloud &#38 Salesforce CPQ.
-                                    </p>
+                                    <p>Performed rigorous testing to ensure code efficiency for bulk data and with a min. coverage of 90%.</p>
                                 </li>
                                 <li>
                                     <p>Understood the basics of CPQ - Features, Configuring, Bundles, Product Rules, Pricing Methods/rules. Worked on bundle configurations as per business requirements.</p>
                                 </li>
                                 <li>
-                                    <p>Have hands-on experience in data migration activities using workbench and data loader
+                                    <p>Designed data mapping for integrations. Knowledge in data migration activities using data loader.
                                     </p>
                                 </li>
                                 <li>
-                                    <p>Worked closely with the team lead/ project manager to develop solutions in accordance with the
-                                        system design and to provide scope/timelines for the backlog.
+                                    <p>Programmed and gained hands-on experience with different aspects of web services (XML, WSDL, RESTful API’s, Connected Apps) and knowledge in integration patterns</p>
+                                </li>
+                                <li>
+                                    <p>Coordinated closely with the project manager to develop solutions in accordance with the system design and conducted proof-of-concept’s to provide scope/timelines for the backlog.
                                     </p>
                                 </li>
                                 <li>
-                                    <p>Have strong knowledge and experience in Salesforce security access and worked in Agile-Scrum
-                                        methodology to ensure high quality deliverables following Salesforce best practices.
+                                    <p>Worked in agile scrum methodology and participated in daily scrum calls to ensure high quality deliverables implementing coding best practices and governor limits.
                                     </p>
                                 </li>
                             </ul>
@@ -197,18 +196,17 @@
                                 class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
                         <div class="w3-container">
                             <h5 class="w3-opacity"><b>University of Central Missouri, Lee's Summit, Missouri, United States</b></h5>
-                            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2022 - Dec 2023 
+                            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2022 -  Expected. Dec 2023 
                                 <span class="w3-tag w3-teal w3-round">Current</span>
                             </h6>
-                            <p>Master's Degree in Computer Science</p>
+                            <p>Master's Degree in Computer Science &nbsp;<b>Grade: </b>4.0/4.0 GPA <i class="w3-margin-left fa fa-user-graduate"></i></p>
                             <hr>
                         </div>
                         <div class="w3-container">
                             <h5 class="w3-opacity"><b>SASTRA Deemed University, Thanjavur, Tamil Nadu, India</b></h5>
                             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2016 - May 2020
                             </h6>
-                            <p>Bachelor's Degree in Computer Science &#38 Engineering.</p>
-                            <p><b>Grade: </b>3.42/4 GPA (7.35/10 CGPA) <i class="w3-margin-left fa fa-user-graduate"></i></p>
+                            <p>Bachelor's Degree in Computer Science. &nbsp;<b>Grade: </b>3.42/4.0 GPA (7.35/10 CGPA) <i class="w3-margin-left fa fa-user-graduate"></i></p>
                         </div>
                     </div>
 
@@ -218,19 +216,22 @@
                         <div class="w3-container">
                             <ul>
                                 <li>
-                                    <p>Salesforce Certified Administrator - Issued at May 2021</p>
+                                    <p>Salesforce Certified Administrator</p>
                                 </li>
                                 <li>
-                                    <p>Salesforce Certifield Platform Developer - Issued at June 2021</p>
+                                    <p>Salesforce Certifield Platform Developer</p>
                                 </li>
                                 <li>
-                                    <p>Salesforce Certified Platform App Builder - Issued at November 2021</p>
+                                    <p>Salesforce Certified Platform App Builder</p>
                                 </li>
                                 <li>
-                                    <p>Salesforce Accredited Process Automation - Issued at September 2021</p>
+                                    <p>Salesforce Accredited Process Automation</p>
                                 </li>
                                 <li>
-                                    <p>Salesforce Accredited Financial Service Cloud - Issued at January 2022</p>
+                                    <p>Salesforce Accredited Financial Service Cloud</p>
+                                </li>
+                                <li>
+                                    <p>API Designer Certification by API Academy</p>
                                 </li>
                             </ul>
                         </div>
