--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>My Profile</title>
+    <style>
+        tr:hover {background-color: gold;}
+    </style>
 </head>
 
 <body class="w3-content" style="max-width:100%">
@@ -16,39 +19,55 @@
                 <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
                     href="javascript:void(0)" onclick="toggleMenu()"><i class="fa fa-bars"></i></a>
                 <a href="#aboutGrid" class="w3-bar-item w3-button w3-padding-large" id="home">Home</a>
-                <a href="#workGrid" class="w3-bar-item w3-button w3-padding-large w3-hide-small" id="work_exp">Education/Work Overview</a>
-                <a href="resume.html" target="_blank" class="w3-bar-item w3-button w3-padding-large w3-hide-small" id="resume">Resume</a>
-                <a href="#contactGrid" class="w3-bar-item w3-button w3-padding-large w3-hide-small" id="contact">Contact</a>
+                <a href="#workGrid" class="w3-bar-item w3-button w3-padding-large w3-hide-small"
+                    id="work_exp">Education/Work Overview</a>
+                <a href="#projectGrid" class="w3-bar-item w3-button w3-padding-large w3-hide-small"
+                    id="project">Personal Projects</a>
+                <a href="resume.html" target="_blank" class="w3-bar-item w3-button w3-padding-large w3-hide-small"
+                    id="resume">Resume</a>
+                <a href="#contactGrid" class="w3-bar-item w3-button w3-padding-large w3-hide-small"
+                    id="contact">Contact</a>
             </div>
         </div>
 
         <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
         <div id="smallScreenNav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top">
-            <a href="#workGrid" class="w3-bar-item w3-button w3-padding-large" onclick="toggleMenu()" id="work_exp">Education/Work Overview</a>
-            <a href="resume.html" target="_blank" class="w3-bar-item w3-button w3-padding-large" onclick="toggleMenu()" id="resume">Resume</a>
-            <a href="#contactGrid" class="w3-bar-item w3-button w3-padding-large" onclick="toggleMenu()" id="contact">Contact</a>
+            <a href="#workGrid" class="w3-bar-item w3-button w3-padding-large" onclick="toggleMenu()"
+                id="work_exp">Education/Work Overview</a>
+            <a href="#projectGrid" class="w3-bar-item w3-button w3-padding-large" onclick="toggleMenu()"
+                id="project">Personal Projects</a>
+            <a href="resume.html" target="_blank" class="w3-bar-item w3-button w3-padding-large" onclick="toggleMenu()"
+                id="resume">Resume</a>
+            <a href="#contactGrid" class="w3-bar-item w3-button w3-padding-large" onclick="toggleMenu()"
+                id="contact">Contact</a>
         </div>
 
         <!-- First Grid: Logo & About -->
-        <div id="aboutGrid" class="w3-row">
+        <div id="aboutGrid" class="w3-row" style="height: 750px;">
             <div class="w3-full w3-blue-grey w3-container">
                 <div class="w3-padding-64 w3-center w3-padding-large">
                     <h1>Venkata Lakshmi Sasank Tipparaju</h1>
-                    <img src="images/pp.jpg" class="w3-margin w3-circle" alt="Person"
-                        style="width:20%; height:05%">
+                    <img src="images/pp.jpg" class="w3-margin w3-circle" alt="Person" style="width:20%; height:05%">
                     <div class="w3-left-align w3-padding-small">
                         <p>Hi there, you can call me Sasank. Welcome to my static page</p>
-                        <p style="text-align:justify">&emsp;&emsp; Highly motivated computer science graduate student and a software developer with entry-level experience of over 2.5 years passionate about Salesforce ecosystem and web development. Specialized in Agile, Object Oriented Programming, and Web technology. 
-                            Always eager to learn new technology and applying them to solve real world problems by innovative software solutions.  Adept at developing CRM solutions for client businesses and identifying opportunities to improve the user experience (Salesforce.com). A fast learner and able to work independently with minimal supervision. 
-                            Involved in end-end project implementation from planning, development, monitoring, delivering and played an active role in all agile ceremonies.</p>
+                        <p style="text-align:justify">&emsp;&emsp; Highly motivated computer science graduate student
+                            and a software developer with entry-level experience of over 2.5 years passionate about
+                            Salesforce ecosystem and web development. Specialized in Agile, Object Oriented Programming,
+                            and Web technology.
+                            Always eager to learn new technology and applying them to solve real world problems by
+                            innovative software solutions. Adept at developing CRM solutions for client businesses and
+                            identifying opportunities to improve the user experience (Salesforce.com). A fast learner
+                            and able to work independently with minimal supervision.
+                            Involved in end-end project implementation from planning, development, monitoring,
+                            delivering and played an active role in all agile ceremonies.</p>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
         <hr>
         <!-- Second Grid: Work & Resume -->
-        <div id="workGrid"  class="w3-row w3-margin-top w3-indigo" style="height:100%">
+        <div id="workGrid" class="w3-row w3-margin-top w3-indigo" style="height:auto">
             <br><br>
             <div class="w3-full w3-indigo w3-container w3-center" id="work">
                 <h2>Work History Overview</h2>
@@ -59,14 +78,15 @@
                             <th>Organization</th>
                             <th>Location</th>
                             <th>Role</th>
-                            <th>Key Technologies</th>
+                            <th>Key Skills</th>
                         </tr>
                         <tr class="w3-white">
                             <td>Apr 2021 - Jul 2022</td>
                             <td>PriceWaterhouseCoopers (PwC)</td>
                             <td>Bangalore, India</td>
                             <td>Associate Salesforce Developer</td>
-                            <td>LWC, Aura, Apex, Triggers, SOQL, Salesforce Lightning, Salesforce.com Configurations &#38 Development</td>
+                            <td>LWC, Aura, Apex, Triggers, SOQL, Salesforce Lightning, Salesforce.com Configurations
+                                &#38 Development</td>
                         </tr>
                         <tr class="w3-white w3-border">
                             <td>Aug 2020 - Apr 2021</td>
@@ -82,7 +102,7 @@
                 <div class="w3-padding-64 w3-center">
                     <h2>Education History Overview</h2>
                     <div class="w3-container w3-responsive">
-                        <table class="w3-table">
+                        <table class="w3-table w3-striped">
                             <tr class="w3-grey">
                                 <th>Year</th>
                                 <th>Qualification</th>
@@ -102,7 +122,7 @@
                                 <td>Bachelor of Technology in Computer Science &#38 Engineering</td>
                                 <td>SASTRA Deemed University</td>
                                 <td>Thanjavur, India</td>
-                                <td>7.35 CGPA  (3.42/4 GPA)</td>
+                                <td>7.35 CGPA (3.42/4 GPA)</td>
                             </tr>
                             <tr class="w3-white w3-border">
                                 <td>Jun 2015 - Apr 2016</td>
@@ -124,8 +144,56 @@
             </div>
         </div>
         <hr>
-        <!-- Third Grid: Swing By & Contact -->
-        <div id="contactGrid" class="w3-row w3-dark-grey" >
+        <!-- Third Grid: Projects -->
+        <div id="projectGrid" class="w3-row w3-margin-top w3-indigo" style="height:100%">
+            <br><br>
+            <div class="w3-full w3-indigo w3-container w3-center" id="project_list">
+                <h2>Academic/ Personal Projects</h2>
+                <div class="w3-container w3-responsive">
+                    <table class="w3-table w3-striped">
+                        <tr class="w3-grey">
+                            <th style="width:15%">Project Title</th>
+                            <th style="width:30%">Description</th>
+                            <th style="width:7%">Duration</th>
+                            <th style="width:7%">Link</th>
+                            <th style="width:15%">Key Skills</th>
+                        </tr>
+                        <tr class="w3-white">
+                            <td>To-Do-List Web Application</td>
+                            <td style="text-align: justify;">A simple to-do list web application, that the end users can manage their day-to-day tasks or things that must be completed in a day in much more organized way with a due date and also order by prioritizing them and marking the status as completed once done.</td>
+                            <td>Fall 2022</td>
+                            <td><a href="https://sasank-todo-list.herokuapp.com/" target="_blank">Click Here</a></td>
+                            <td>PHP, CSS, Boostrap, JavaScript. jQuery, JSON, Ajax Calls, Post/Get Methods</td>
+                        </tr>
+                        <tr class="w3-white w3-border">
+                            <td>Blog Web Application</td>
+                            <td style="text-align: justify;">A simple blog application created using MERN. stack. This application lets end users to create and publish their creative ideas or experiences in the form of blogs. Each post has a unique Id and an author that distinguishes between other posts in the application. A user can post more than one blog and can comment, like or dislike on other user blogs. Our Blog application has mainly three collections Users, Stories, and Comments in MongoDB to store the required data respectively</td>
+                            <td>Fall 2022</td>
+                            <td><a href="" target="_blank">Click Here</a></td>
+                            <td>MERN Stack</td>
+                        </tr>
+                        <tr class="w3-white w3-border">
+                            <td>Sign Language Recognition System</td>
+                            <td style="text-align: justify;">Applying Course Knowledge & Experimenting with various machine learning algorithms i.e., Experimental Analysis of algorithms Support Vector Machine, Decision Tree, Random Forest, Xgboost, and LightGBM in the area of SLRS. Loaded the datasets from Kaggle, divided into training and testing datasets, performed Image Augmentation, Preprocessing of data and CNN Layering techniques before passing to ML algorithms</td>
+                            <td>Fall 2022</td>
+                            <td><a href="https://github.com/Sasank09/Sign-Language-Recognition-System" target="_blank">Click Here</a></td>
+                            <td>Machine Learning, Python</td>
+                        </tr>
+                        <tr class="w3-white w3-border">
+                            <td>Portfolio</td>
+                            <td>All about Sasank in one place</td>
+                            <td>In Development</td>
+                            <td><a href="" target="_blank">Click Here</a></td>
+                            <td>Salesforce, LWC, Apex, SOQL, Flows</td>
+                        </tr>
+
+                    </table>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <!-- Fourth Grid: Swing By & Contact -->
+        <div id="contactGrid" class="w3-row w3-dark-grey">
             <div class="w3-full w3-dark-grey w3-container w3-center">
                 <div class="w3-padding-64  w3-padding-large">
                     <h1>Swing By</h1>
@@ -137,9 +205,12 @@
                 <hr>
                 <div class="w3-center">
                     <b><i class="fa fa-link fa-fw w3-margin-right w3-text-teal"></i>Links</b>
-                    <p class="w3-teal"><a href="https://github.com/Sasank09" target="_blank" style="text-decoration: none;">Github</a></p>
-                    <p class="w3-teal"><a href="https://trailblazer.me/id/sasank09" target="_blank" style="text-decoration: none;">Trailhead</a></p>
-                    <p class="w3-teal"><a href="https://www.linkedin.com/in/sasank-tipparaju-806408184/" target="_blank" style="text-decoration: none;">LinkedIn</a></p>
+                    <p class="w3-teal"><a href="https://github.com/Sasank09" target="_blank"
+                            style="text-decoration: none;">Github</a></p>
+                    <p class="w3-teal"><a href="https://trailblazer.me/id/sasank09" target="_blank"
+                            style="text-decoration: none;">Trailhead</a></p>
+                    <p class="w3-teal"><a href="https://www.linkedin.com/in/sasank-tipparaju-806408184/" target="_blank"
+                            style="text-decoration: none;">LinkedIn</a></p>
                 </div>
                 <hr>
             </div>
@@ -153,6 +224,11 @@
 
     <script>
         var $ = (id) => document.getElementById(id);
+        let height = screen.height;
+
+        $("projectGrid").style.height = height+"px";
+        $("workGrid").style.height = height+"px";
+
         // Used to toggle the menu on small screens when clicking on the menu button
         function toggleMenu() {
             var x = document.getElementById("smallScreenNav");
@@ -162,6 +238,7 @@
                 x.className = x.className.replace(" w3-show", "");
             }
         }
+
     </script>
 </body>
 
