--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>My Profile</title>
+    <title>Sasank Tipparaju's Profile</title>
     <style>
         tr:hover {background-color: gold;}
     </style>
@@ -50,8 +50,8 @@
                     <img src="images/pp.jpg" class="w3-margin w3-circle" alt="Person" style="width:20%; height:05%">
                     <div class="w3-left-align w3-padding-small">
                         <p>Hi there, you can call me Sasank. Welcome to my static page</p>
-                        <p style="text-align:justify">&emsp;&emsp; Highly motivated computer science graduate student
-                            and a software developer with entry-level experience of over 2.5 years passionate about
+                        <p style="text-align:justify">&emsp;&emsp; Highly motivated computer science graduate with 5+ years of programming experience 
+                            and a software developer with profession IT experience of over 3 years passionate about
                             Salesforce ecosystem and web development. Specialized in Agile, Object Oriented Programming,
                             and Web technology.
                             Always eager to learn new technology and applying them to solve real world problems by
@@ -81,10 +81,17 @@
                             <th>Key Skills</th>
                         </tr>
                         <tr class="w3-white">
+                            <td>Apr 2023 - May 2023</td>
+                            <td>SmartInternZ</td>
+                            <td>Remote</td>
+                            <td>Salesforce Administrator</td>
+                            <td> Salesforce.com Configurations &#38 Development, Reports & Dashboard, Sales Cloud, Service Cloud</td>
+                        </tr>
+                        <tr class="w3-white w3-border">
                             <td>Apr 2021 - Jul 2022</td>
                             <td>PriceWaterhouseCoopers (PwC)</td>
                             <td>Bangalore, India</td>
-                            <td>Associate Salesforce Developer</td>
+                            <td>Software Developer(Salesforce)</td>
                             <td>LWC, Aura, Apex, Triggers, SOQL, Salesforce Lightning, Salesforce.com Configurations
                                 &#38 Development</td>
                         </tr>
@@ -94,6 +101,13 @@
                             <td>Chennai, India</td>
                             <td>Programmer Analyst Trainee</td>
                             <td>Informatica PowerCenter, MySQL, Unix Shell Scripting, Salesforce, Apex Test Classes</td>
+                        </tr>
+                        <tr class="w3-white">
+                            <td>Dec 2019 - Jan 2020</td>
+                            <td>Cognizant</td>
+                            <td>Chennai, India</td>
+                            <td>Early Engagement Program</td>
+                            <td>MySQL, Java, Spring MVC, Spring Boot, Unix, Web Application Development</td>
                         </tr>
                     </table>
                 </div>
@@ -159,18 +173,25 @@
                             <th style="width:15%">Key Skills</th>
                         </tr>
                         <tr class="w3-white">
+                            <td>MindMapping Application</td>
+                            <td style="text-align: justify;">A Spring Boot Reactjs Application, that lets the end users create and visualize the ideas, relating them around a central core concept</td>
+                            <td>Summer 2023</td>
+                            <td><a href="https://github.com/Sasank09/MindMapping" target="_blank">Click Here</a></td>
+                            <td>React Js, Redux, Spring Boot, REST API, JWT Authentication</td>
+                        </tr>
+                        <tr class="w3-white w3-border">
                             <td>To-Do-List Web Application</td>
-                            <td style="text-align: justify;">A simple to-do list web application, that the end users can manage their day-to-day tasks or things that must be completed in a day in much more organized way with a due date and also order by prioritizing them and marking the status as completed once done.</td>
+                            <td style="text-align: justify;">A to-do list web application let's the end users can manage their day-to-day tasks or things that must be completed in a day in much more organized way with a due date and also order by prioritizing them and marking the status as completed once done.</td>
                             <td>Fall 2022</td>
-                            <td><a href="https://sasank-todo-list.herokuapp.com/" target="_blank">Click Here</a></td>
-                            <td>PHP, CSS, Boostrap, JavaScript. jQuery, JSON, Ajax Calls, Post/Get Methods</td>
+                            <td><a href="https://github.com/Sasank09/todo-list" target="_blank">Click Here</a></td>
+                            <td>PHP, CSS, Boostrap, JavaScript. jQuery, JSON, Ajax Calls, REST API's</td>
                         </tr>
                         <tr class="w3-white w3-border">
                             <td>Blog Web Application</td>
                             <td style="text-align: justify;">A simple blog application created using MERN. stack. This application lets end users to create and publish their creative ideas or experiences in the form of blogs. Each post has a unique Id and an author that distinguishes between other posts in the application. A user can post more than one blog and can comment, like or dislike on other user blogs. Our Blog application has mainly three collections Users, Stories, and Comments in MongoDB to store the required data respectively</td>
                             <td>Fall 2022</td>
                             <td><a href="" target="_blank">Click Here</a></td>
-                            <td>MERN Stack</td>
+                            <td>MERN Stack, REST API, JWT Auth</td>
                         </tr>
                         <tr class="w3-white w3-border">
                             <td>Sign Language Recognition System</td>
@@ -181,9 +202,9 @@
                         </tr>
                         <tr class="w3-white w3-border">
                             <td>Portfolio</td>
-                            <td>All about Sasank in one place</td>
+                            <td>All about Sasank in one place- Using Salesforce Stack </td>
                             <td>In Development</td>
-                            <td><a href="" target="_blank">Click Here</a></td>
+                            <td><a href="https://sasank-tipparaju-dev-ed.my.site.com/" target="_blank">Click Here</a></td>
                             <td>Salesforce, LWC, Apex, SOQL, Flows</td>
                         </tr>
 
