--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -162,7 +162,7 @@
         <div id="projectGrid" class="w3-row w3-margin-top w3-indigo" style="height:100%">
             <br><br>
             <div class="w3-full w3-indigo w3-container w3-center" id="project_list">
-                <h2>Academic/ Personal Projects</h2>
+                <h2>Projects</h2>
                 <div class="w3-container w3-responsive">
                     <table class="w3-table w3-striped">
                         <tr class="w3-grey">
@@ -175,28 +175,28 @@
                         <tr class="w3-white">
                             <td>MindMapping Application</td>
                             <td style="text-align: justify;">A Spring Boot Reactjs Application, that lets the end users create and visualize the ideas, relating them around a central core concept</td>
-                            <td>Summer 2023</td>
+                            <td>2023</td>
                             <td><a href="https://github.com/Sasank09/MindMapping" target="_blank">Click Here</a></td>
                             <td>React Js, Redux, Spring Boot, REST API, JWT Authentication</td>
                         </tr>
                         <tr class="w3-white w3-border">
                             <td>To-Do-List Web Application</td>
                             <td style="text-align: justify;">A to-do list web application let's the end users can manage their day-to-day tasks or things that must be completed in a day in much more organized way with a due date and also order by prioritizing them and marking the status as completed once done.</td>
-                            <td>Fall 2022</td>
+                            <td>2022</td>
                             <td><a href="https://github.com/Sasank09/todo-list" target="_blank">Click Here</a></td>
                             <td>PHP, CSS, Boostrap, JavaScript. jQuery, JSON, Ajax Calls, REST API's</td>
                         </tr>
                         <tr class="w3-white w3-border">
                             <td>Blog Web Application</td>
                             <td style="text-align: justify;">A simple blog application created using MERN. stack. This application lets end users to create and publish their creative ideas or experiences in the form of blogs. Each post has a unique Id and an author that distinguishes between other posts in the application. A user can post more than one blog and can comment, like or dislike on other user blogs. Our Blog application has mainly three collections Users, Stories, and Comments in MongoDB to store the required data respectively</td>
-                            <td>Fall 2022</td>
+                            <td>2022</td>
                             <td><a href="" target="_blank">Click Here</a></td>
                             <td>MERN Stack, REST API, JWT Auth</td>
                         </tr>
                         <tr class="w3-white w3-border">
                             <td>Sign Language Recognition System</td>
                             <td style="text-align: justify;">Applying Course Knowledge & Experimenting with various machine learning algorithms i.e., Experimental Analysis of algorithms Support Vector Machine, Decision Tree, Random Forest, Xgboost, and LightGBM in the area of SLRS. Loaded the datasets from Kaggle, divided into training and testing datasets, performed Image Augmentation, Preprocessing of data and CNN Layering techniques before passing to ML algorithms</td>
-                            <td>Fall 2022</td>
+                            <td>2022</td>
                             <td><a href="https://github.com/Sasank09/Sign-Language-Recognition-System" target="_blank">Click Here</a></td>
                             <td>Machine Learning, Python</td>
                         </tr>
