--- a/MyProfile/resume.html
+++ b/MyProfile/resume.html
@@ -59,7 +59,7 @@
                                 </ul>
                                 <h5>Programming Languages</h5>
                                 <ul>
-                                    <li>Core Java, Python(Flask)</li>
+                                    <li>Core Java(Spring Boot), Python(Flask)</li>
                                 </ul>
                                 <h5>Web Technology</h5>
                                 <ul>
